# vivax-mhaps

./: LICENSE  README.md  pyproject.toml
docs/: README.html  genindex.html  index.html  objects.inv  search.html  searchindex.js  selection.html  windows.html
docs/_sources/: README.md  index.md  selection.ipynb  windows.ipynb
notebooks/: 1_evaluating_marker_candidates.ipynb  1_marker_optimisation.ipynb  2_marker_selection.ipynb  2_selection_from_microhaplotype_candidates.ipynb  3_find_pairs.ipynb  4_FWS_calculations.ipynb  Untitled.ipynb
notebooks/sliding_window_results/: PvP01_01_v1_windowed_heterozygosity.csv  PvP01_02_v1_windowed_heterozygosity.csv  PvP01_03_v1_windowed_heterozygosity.csv  PvP01_04_v1_windowed_heterozygosity.csv  PvP01_05_v1_windowed_heterozygosity.csv  PvP01_06_v1_windowed_heterozygosity.csv  PvP01_07_v1_windowed_heterozygosity.csv  PvP01_08_v1_windowed_heterozygosity.csv  PvP01_09_v1_windowed_heterozygosity.csv  PvP01_10_v1_windowed_heterozygosity.csv  PvP01_11_v1_windowed_heterozygosity.csv  PvP01_12_v1_windowed_heterozygosity.csv  PvP01_13_v1_windowed_heterozygosity.csv  PvP01_14_v1_windowed_heterozygosity.csv  compiled_windowed_heterozygosity.csv
precomputed/: freq_missing.npy  frequencies.tsv  genome_stats.csv  markers.tsv  variants_selected.tsv
precomputed/sliding_window_results/: PvP01_01_v1_windowed_stats.csv  PvP01_02_v1_windowed_stats.csv  (+12 more)
supplementary_files/: Pv4_fws.txt  Pv4_populations_full_sample_metadata_20190430.txt  Pv4_regions.bed  Samples_in_Pv1.tsv  sasha_sample_metadata_recalculated_fws.txt
